# NoiseBecomesImage

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
src/: __init__.py  main.py  particle_system.py  renderer.py  score_field.py  utils.py
